[gd_scene load_steps=12 format=3 uid="uid://cftgd0b0e3ei3"]

[ext_resource type="Script" path="res://src/scripts/gui-scripts/chat_gui.gd" id="1_l3oyk"]
[ext_resource type="Texture2D" uid="uid://k13hs5lriywa" path="res://src/ui/elements/Rectangleeee.png" id="2_jbe85"]
[ext_resource type="Texture2D" uid="uid://yjky8xlx14ib" path="res://src/ui/elements/Rectangle 270.png" id="3_lwn0j"]
[ext_resource type="Texture2D" uid="uid://c1onytfngar1s" path="res://src/ui/elements/Rectangle 269.png" id="4_chgh0"]
[ext_resource type="Texture2D" uid="uid://jpwiupoxdq5b" path="res://src/ui/elements/Rectangle 284.png" id="5_38dbk"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_te34b"]
texture = ExtResource("2_jbe85")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ocxba"]
texture = ExtResource("3_lwn0j")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kjoyb"]
texture = ExtResource("4_chgh0")
expand_margin_left = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_w6j6p"]
texture = ExtResource("3_lwn0j")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ae680"]
texture = ExtResource("5_38dbk")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_snwt4"]

[node name="ChatGui" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 111.0
offset_bottom = 111.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
script = ExtResource("1_l3oyk")

[node name="APIRequest" type="HTTPRequest" parent="."]

[node name="Open-Chat-Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -921.0
offset_right = 239.0
offset_bottom = -134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_te34b")

[node name="Close-Chat" type="Button" parent="Open-Chat-Panel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -52.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 51.0
grow_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxTexture_ocxba")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_ocxba")
theme_override_styles/disabled = SubResource("StyleBoxTexture_ocxba")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_ocxba")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_ocxba")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_ocxba")
theme_override_styles/hover = SubResource("StyleBoxTexture_ocxba")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_ocxba")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ocxba")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_ocxba")
theme_override_styles/normal = SubResource("StyleBoxTexture_ocxba")
text = "X"

[node name="Input" type="LineEdit" parent="Open-Chat-Panel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 17.0
offset_top = -52.0
offset_right = 432.0
offset_bottom = -10.0
grow_vertical = 0
theme_override_styles/focus = SubResource("StyleBoxTexture_kjoyb")
theme_override_styles/read_only = SubResource("StyleBoxTexture_kjoyb")
theme_override_styles/normal = SubResource("StyleBoxTexture_kjoyb")
placeholder_text = "Enter message..."
max_length = 150

[node name="Send" type="Button" parent="Open-Chat-Panel"]
z_index = 1
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -44.0
offset_top = -48.0
offset_right = 68.0
offset_bottom = 64.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.335, 0.335)
theme_override_font_sizes/font_size = 71
theme_override_styles/focus = SubResource("StyleBoxTexture_w6j6p")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxTexture_w6j6p")
theme_override_styles/disabled = SubResource("StyleBoxTexture_w6j6p")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxTexture_w6j6p")
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_w6j6p")
theme_override_styles/hover_mirrored = SubResource("StyleBoxTexture_w6j6p")
theme_override_styles/hover = SubResource("StyleBoxTexture_w6j6p")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxTexture_w6j6p")
theme_override_styles/pressed = SubResource("StyleBoxTexture_w6j6p")
theme_override_styles/normal_mirrored = SubResource("StyleBoxTexture_w6j6p")
theme_override_styles/normal = SubResource("StyleBoxTexture_w6j6p")
action_mode = 0
text = ">"
flat = true

[node name="Chat-Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -237.0
offset_top = -220.0
offset_right = 250.0
offset_bottom = -132.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_ae680")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = -229.0
offset_top = -214.0
offset_right = 231.0
offset_bottom = -140.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="Messages" type="Label" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Loading..."

[node name="Open-Chat" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -237.0
offset_top = -220.0
offset_right = 237.0
offset_bottom = -137.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/focus = SubResource("StyleBoxEmpty_snwt4")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_snwt4")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_snwt4")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_snwt4")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_snwt4")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_snwt4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_snwt4")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_snwt4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_snwt4")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_snwt4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_snwt4")
flat = true

[connection signal="request_completed" from="APIRequest" to="." method="_on_api_request_request_completed"]
[connection signal="pressed" from="Open-Chat-Panel/Close-Chat" to="." method="_on_close_chat_pressed"]
[connection signal="pressed" from="Open-Chat-Panel/Send" to="." method="_on_send_pressed"]
[connection signal="pressed" from="Open-Chat" to="." method="_on_open_chat_pressed"]
